--- a/hugo.toml
+++ b/hugo.toml
@@ -1,21 +1,3 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'LIFE AND MATHEMATICAL SCIENCES'
-theme = 'ananke'
-
-[[menu.main]]
-  name = "Home"
-  url = "/"
-  weight = 1
-[[menu.main]]
-  name = "お知らせ"
-  url = "/news/"
-  weight = 5
-[[menu.main]]
-  name = "メンバー"
-  url = "/members/"
-  weight = 10
-[[menu.main]]
-  name = "研究室を希望される方へ"
-  url = "/prospective-students/"
-  weight = 20
+# This file is intentionally left empty.
+# Configuration is now managed in the config/_default/ directory
+# as required by the Blowfish theme.
