Refactor: Migrate theme management from Git Submodules to Hugo Modules

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,7 +2,7 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = '生命数理科学分野'
-theme = 'blowfish'
+# theme = 'blowfish' # Removed for Hugo Modules
 
 # Enable GitInfo for last modified date
 enableGitInfo = false
