--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -20,3 +20,8 @@ paginate = 10
     weight = 1
     [languages."en-us".params]
       dateFormat = "January 2, 2006"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true # この行を確認・追加 (trueにする)
